be/src/runtime/coordinator.h
@@ -121,8 +121,8 @@ class Coordinator { // NOLINT: The member variables could be re-ordered to save 
   /// Fills 'results' with up to 'max_rows' rows. May return fewer than 'max_rows'
   /// rows, but will not return more.
   ///
-  /// If *eos is true, execution has completed and GetNext() must not be called
-  /// again.
+  /// If *eos is true, execution has completed. Subsequent calls to GetNext() will be a
+  /// no-op.
   ///
   /// GetNext() will not set *eos=true until all fragment instances have either completed
   /// or have failed.
